--- a/strongeats_app/pubspec.yaml
+++ b/strongeats_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts:
   firebase_auth: ^4.12.0
   firebase_core: ^2.20.0
+  cloud_firestore: ^4.12.1
 
 dev_dependencies:
   flutter_test:
