+google/apple login +UI redesign +barbell logo

--- a/strongeats_app/pubspec.yaml
+++ b/strongeats_app/pubspec.yaml
@@ -49,7 +49,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/barbell/ios/AppIcon.appiconset/Icon-App-60x60@3x.png"
+  image_path: "lib/assets/barbell.png'"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,8 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - lib/assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
