--- a/strongeats_app/pubspec.yaml
+++ b/strongeats_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.12.0
   firebase_core: ^2.20.0
   cloud_firestore: ^4.12.1
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
