--- a/strongeats_app/pubspec.yaml
+++ b/strongeats_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.20.0
   cloud_firestore: ^4.12.1
   google_nav_bar: ^5.0.6
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
