--- a/strongeats_app/pubspec.yaml
+++ b/strongeats_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.12.1
   google_nav_bar: ^5.0.6
   email_validator: ^2.1.17
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
