+cleaning up code +workout/exercise classes +main page UI

--- a/strongeats_app/pubspec.yaml
+++ b/strongeats_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   email_validator: ^2.1.17
   google_sign_in: ^6.1.5
+  provider:
 
 dev_dependencies:
   flutter_test:
