--- a/strongeats_app/pubspec.yaml
+++ b/strongeats_app/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   email_validator: ^2.1.17
   google_sign_in: ^6.1.5
   provider:
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
